<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_image_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"

            android:textSize="@dimen/slide_title"
            android:fontFamily="verdana.ttf"

            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@mipmap/ic_launcher" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textAlignment="center"


             />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signuptostart"
            android:textStyle="bold"
            android:textAlignment="center"


            />


    </LinearLayout>


</RelativeLayout>