<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"


    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tech9teen.NewVerificationActivity"
    tools:showIn="@layout/activity_new_verification">


    <TextView
        android:id="@+id/txterror"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#f44336"
        android:gravity="center"
        android:text="Please Enable Data Connection"

        android:textColor="#FFF"
        android:textStyle="bold"
        android:visibility="visible"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/icon_verifcation_message" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"

        android:text="@string/verification_line1"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/verification_line2"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="mobile"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/verification_line3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/verification_line4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />


    <!-- <android.support.design.widget.TextInputLayout

         android:gravity="center"
         android:layout_width="150dp"
         android:layout_height="35dp"
         android:layout_below="@+id/textView2"
         >-->



    <EditText
        android:id="@+id/txtcode"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:clickable="false"


        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter OTP"
        android:inputType="numberSigned"
        android:maxLength="4"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark">

        <requestFocus />
    </EditText>
    <!--</android.support.design.widget.TextInputLayout>-->


    <LinearLayout
        android:layout_width="fill_parent"

        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.andexert.library.RippleView

            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"

            android:layout_toLeftOf="@+id/more2">

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="?android:actionBarSize"
                android:background="@drawable/image_bg"
                android:text="         Submit         "
                android:textColor="@color/colorPrimaryDark" />


        </com.andexert.library.RippleView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"

        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.andexert.library.RippleView

            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"

            android:layout_toLeftOf="@+id/more2">

            <Button
                android:id="@+id/btnresend"
                android:layout_width="wrap_content"
                android:layout_height="?android:actionBarSize"
                android:background="@drawable/image_bg"
                android:text="         Resend         "

                android:textColor="@color/colorPrimaryDark" />


        </com.andexert.library.RippleView>


    </LinearLayout>



</LinearLayout>
